fix: Slingonian namings

--- a/uvn_mod/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/uvn_mod/localisation/russian/countries_cosmetic_l_russian.yml
@@ -1549,16 +1549,16 @@
 
  SLI_neutrality:0 "Слингония"
  SLI_neutrality_DEF:0 "Слингония"
- SLI_neutrality_ADJ:0 "Слингонийск."
- SLI_fascism:0 "Великая Слингония"
- SLI_fascism_DEF:0 "Великая Слингония"
- SLI_fascism_ADJ:0 "Слингонийск."
+ SLI_neutrality_ADJ:0 "Слингонск."
+ SLI_fascism:0 "Фашисткая Слингонския"
+ SLI_fascism_DEF:0 "Фашисткая Слингония"
+ SLI_fascism_ADJ:0 "Слингонск."
  SLI_democratic:0 "Слингония"
- SLI_democratic_DEF:0 "Слингония"
- SLI_democratic_ADJ:0 "Слингонийск."
- SLI_communism:0 "Слингонийская СР"
- SLI_communism_DEF:0 "Слингонийская СР"
- SLI_communism_ADJ:0 "Слингонийск."
+ SLI_democratic_DEF:0 "Слингонская Федерация"
+ SLI_democratic_ADJ:0 "Слингонск."
+ SLI_communism:0 "Советская Слингония"
+ SLI_communism_DEF:0 "Советская Слингония"
+ SLI_communism_ADJ:0 "Слингонск."
 
  ZEI_neutrality:0 "Цайтланд"
  ZEI_neutrality_DEF:0 "Цайтланд"
