--- a/uvn_mod/localisation/russian/state_names_l_russian.yml
+++ b/uvn_mod/localisation/russian/state_names_l_russian.yml
@@ -249,7 +249,7 @@
  STATE_246:0 "Ржев"
  STATE_247:0 "Чебурекоград"
  STATE_248:0 "Ярославль"
- STATE_249:0 "Казань"
+ STATE_249:0 "Валлориум"
  STATE_250:0 "Ульяновск"
  STATE_251:1 "Куйбышев"
  STATE_252:1 "Горький"
@@ -398,7 +398,7 @@
  STATE_395:0 "Иллинойс"
  STATE_396:0 "Индиана"
  STATE_397:0 "Сыктывкар"
- STATE_398:0 "Пермь"
+ STATE_398:0 "Градлион"
  STATE_399:1 "Ижевск"
  STATE_400:0 "Киров"
  STATE_401:1 "Балаково"
@@ -651,7 +651,7 @@
  STATE_648:0 "Остров Маркуса"
  STATE_649:0 "Галапагосские острова"
  STATE_650:0 "Остров Атту"
- STATE_651:0 "Уфа"
+ STATE_651:0 "Бераклидолион"
  STATE_652:0 "Оренбург"
  STATE_653:0 "Свердловск"
  STATE_654:1 "Ойратский регион"
@@ -833,7 +833,7 @@
  STATE_830:0 "Бухара"
  STATE_831:0 "Хива"
  STATE_832:0 "Дашогуз"
- STATE_833:0 "Марий Эл"
+ STATE_833:0 "Олидолиум"
  STATE_834:0 "Балта-Тирасполь"
  STATE_835:0 "Харарге"
  STATE_836:0 "Бале"
