--- a/uvn_mod/localisation/russian/REA_l_russian.yml
+++ b/uvn_mod/localisation/russian/REA_l_russian.yml
@@ -15,3 +15,13 @@
  intel_build_start:0 "Корпорация Intel построила новые офисы"
  intel_distribute_start:0 "Корпорация Intel увеличила продажи продукции"
  intel_invest_in_company_start:0 "В корпорацию Intel привлечены инвестиции"
+
+ technology_leader:0 "Технологический лидер"
+ peacemaker:0 "Миротворец"
+
+ REA_DUS_pact:0 "Пакт с Дусибургом"
+ REA_dus_pact_desc:0 "Дусибург - одно из крупнейших государств Европы, и один из союзников Страны Реальности. Мы должны официально утвердить наш статус."
+ REA_ZEI_border_war:0 "Дать отпор Цайтланду"
+ REA_ZEI_border_war_desc:0 "У нас много противоречий с ВГК, однако сегодня настал час дать отпор Цайтланду и освободить ВГК от Цайтландской угрозы."
+ REA_for_everyone:0 "Уважать коренные народы"
+ REA_for_everyone_desc:0 "Мы должны уважать коренные народы нашей страны и всячески их поддерживать. Несомненно, это окупится в будущем."
