--- a/uvn_mod/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/uvn_mod/localisation/russian/countries_cosmetic_l_russian.yml
@@ -281,3 +281,34 @@
  VIC_BNB_desc:0 "Бюро Национальной Обороны - специальный орган, действующий как полиция, но в куда более тяжких условиях. Это авангард нашей национальной независимости."
  VIC_stability:0 "Стабильность!"
  VIC_stability_desc:0 "Мы добились процветания нашей страны. Кто же этому поспособствовал больше всех?"
+
+ ALL_uvn:0 "Вступить в ОВН"
+ ALL_uvn_desc:0 "Прежде, чем мы сможем начать наш путь, нам предстоит вступить в ОВН, чтобы развивать дипломатические отношения со всеми странами мира."
+ ALL_promka:0 "Развитие промышленности"
+ ALL_promka_desc:0 "Мощная промышленность - залог нашего успеха на мировой арене, а также в сердцах наших граждан. Нам требуется вложить некоторое количество средств в развитие промышленности..."
+ ALL_investors:0 "Привлечь инвестиции"
+ ALL_investors_desc:0 "Мы привлечём инвестиции из более развитых стран, таких как Страна Реальности, Дусибург или Цайтланд. Они с радостью помогут нам в развитии нашего государства, а мы получим необходимые средства."
+ ALL_exp:0 "Внимание общества"
+ ALL_exp_desc:0 "Всем очевидно, что в этом мире очень неспокойно. Мы должны подготовить наше общество к возможной войне с врагами нашей страны. За Родину!"
+ ALL_army:0 "Развитие армии"
+ ALL_army_desc:0 "Без сильной армии мы не сможем охранять наши границы и защищать наших граждан. Мы должны срочно принять меры по укреплению нашей великой армии."
+ ALL_autoritarian:0 "Путь сильной руки"
+ ALL_autoritarian_desc:0 "Всем очевидно, что наш народ пока слишком глуп, чтобы развивать нашу страну. Нашей стране нужен чёткий и сильный лидер, который приведёт её к победе!"
+ ALL_democracy:0 "Путь демократии"
+ ALL_democracy_desc:0 "Очевидно, что только благодаря демократической системе, мы сможем обеспечить адекватную сменяемость власти и развитие благ наших граждан, а также охрану их прав и свобод."
+ ALL_fabrika:0 "Строительство фабрик"
+ ALL_fabrika_desc:0 "Для начала мощной индустриализации мы не можем не использовать фабрики. Именно они смогут обеспечить нас всем необходимым, расширив тем самым рабочие места в нашей стране."
+ ALL_zavod:0 "Строительство заводов"
+ ALL_zavod_desc:0 "Нам срочно необходимы новые военные заводы, чтобы обеспечить нашу армию вооружением и танками. Армия не должна быть голодной!"
+ ALL_infrastructure:0 "Развитие инфраструктуры"
+ ALL_infrastructure_desc:0 "Мы не сможем обойтись без модернизации нашей устаревшей инфраструктуры. Нам необходима её модернизация, и чем быстрее - тем лучше."
+ ALL_potreblenie:0 "Общество потребления"
+ ALL_potreblenie_desc:0 "У нас мало ценных военных заводов, зато есть изобретательное население. Мы должны приучать его делать творительные вещи."
+ ALL__sell:0 "Развитие торговли"
+ ALL__sell_desc:0 "Мы должны развивать торговые отношения с другими странами ОВН, получая либо драгоценные фабрики, либо драгоценные ресурсы, которых у нас нет."
+ ALL_exp_together:0 "Офицерские школы"
+ ALL_exp_together_desc:0 "Продолжая готовить народ нашей страны к возможной войне, нам необходимы опытные офицеры и генералы, которых мы сможем обучать в специальных школах."
+ ALL_army_modernisation:0 "Модернизация армии"
+ ALL_army_modernisation_desc:0 "Нам нужно продолжать развитие армии, чтобы противостоять любым атакам на нашу великую страну. Придётся потратить часть ресурсов, но это того стоит."
+ ALL_army_modernisation_2:0 "Завершение модернизации"
+ ALL_army_modernisation_2_desc:0 "Мы проявили огромные успехи в развитии нашей доблестной армии, однако этого всё ещё недостаточно, чтобы эффективно отразить агрессию противника. Используя весь наш опыт, мы обязаны сделать нашу армию самой первой в мире!"
