--- a/uvn_mod/localisation/russian/ideas_l_russian.yml
+++ b/uvn_mod/localisation/russian/ideas_l_russian.yml
@@ -2688,6 +2688,17 @@
  AST_central_bureau_idea:0 "Центральное бюро"
  AST_central_bureau_idea_desc:0 "Совместная разведывательная организация, основанная и координируемая при поддержке США. Ее задача — противостоять противникам на тихоокеанском ТВД."
 
+ REA_uvco_member:0 "Член ООВГ"
+ REA_uvco_member_desc:0 "Страна Реальности - один из членов ООВГ, однако эта организация находится в простое, отчего снижает эффективность дипломатии."
+ REA_technology:0 "Технологический гигант"
+ REA_technology_desc:0 "Мы - чуть ли не единственная страна, которая производит электроннику и одна из немногих, которая разрабатывает ПО. Мы - один из технологических гигантов ОВН."
+ REA_duma:0 "Государственная дума СР"
+ REA_duma_desc:0 "Заброшенный и неработающий институт государственной власти, государственная дума СР не даёт нам возможности быстро и эффективно принимать необходимые решения."
+ REA_democracy_regime:0 "Великая демократия"
+ REA_democracy_regime_desc:0 "Страна Реальности - одна из самых демократических стран мира, которая принимает политических беженцев со всего мира."
+ REA_colonization:0 "Колонизация"
+ REA_colonization_desc:0 "Наша колонизационная политика приводит к тратам ресурсов на колонии, а местное население борется за свою независимость."
+ 
 # === [LocEditor:OrphanedKeys] Keys that do not exist in English ===
  SPR_louis_gonzalez_ubieta:0 "Луис Гонсалес де Убиета"
  SPR_miguel_buiza_femandez_palacios:0 "Мигель Буиса Фернандес-Паласиос"
