--- a/uvn_mod/localisation/russian/state_names_l_russian.yml
+++ b/uvn_mod/localisation/russian/state_names_l_russian.yml
@@ -276,7 +276,7 @@
  STATE_273:0 "Ливийская пустыня"
  STATE_274:0 "Гана"
  STATE_275:0 "Трансвааль"
- STATE_276:0 "Южное Онтарио"
+ STATE_276:0 "Онтарио"
  STATE_277:0 "Зюрз"
  STATE_278:0 "Пампа"
  STATE_279:0 "Сантьяго"
@@ -332,7 +332,7 @@
  STATE_329:0 "Танну-Тува"
  STATE_330:1 "Улан-Батор"
  STATE_331:0 "Ньюфаундленд"
- STATE_332:0 "Лабрадор"
+ STATE_332:0 "Север Лабрадора"
  STATE_333:1 "Северный Борнео"
  STATE_334:1 "Калимантан"
  STATE_335:0 "Ява"
@@ -358,7 +358,7 @@
  STATE_355:0 "Самсун"
  STATE_356:0 "Кастамону"
  STATE_357:0 "Новая Англия"
- STATE_358:0 "Нью-Йорк"
+ STATE_358:0 "Коннектикут"
  STATE_359:0 "Нью-Джерси"
  STATE_360:0 "Пенсильвания"
  STATE_361:0 "Мэриленд"
@@ -464,11 +464,11 @@
  STATE_461:0 "Касабланка"
  STATE_462:0 "Марракеш"
  STATE_463:0 "Аляска"
- STATE_464:0 "Новая Шотландия"
+ STATE_464:0 "Новая Ирландия"
  STATE_465:0 "Нью-Брансуик"
- STATE_466:1 "Север Квебека"
+ STATE_466:1 "Север Вилдленда"
  STATE_467:0 "Манитоба"
- STATE_468:0 "Монте-Реаль"
+ STATE_468:0 "Квебек(Монте-Реаль)"
  STATE_469:0 "Саскачеван"
  STATE_470:0 "Альберта"
  STATE_471:1 "Верхняя Британская Колумбия"
@@ -860,10 +860,10 @@
  STATE_857:1 "Эль-Касим"
  STATE_858:0 "Найран"
  STATE_859:0 "Даммам"
- STATE_860:1 "Кот-Нор"
+ STATE_860:1 "Юг Лабрадора"
  STATE_861:0 "Сагеней"
- STATE_862:1 "Запад Квебека"
- STATE_863:0 "Морис"
+ STATE_862:1 "Юг Вилдленда"
+ STATE_863:0 "Северный Квебек"
  STATE_864:1 "Территория Юкон"
  STATE_865:0 "Северный Саскачеван"
  STATE_866:0 "Регионы Онтарио"
