--- a/uvn_mod/localisation/russian/victory_points_l_russian.yml
+++ b/uvn_mod/localisation/russian/victory_points_l_russian.yml
@@ -380,7 +380,7 @@
  VICTORY_POINTS_10737:0 "Кабул"
  VICTORY_POINTS_4893:0 "Герат"
  VICTORY_POINTS_3957:0 "Вашингтон"
- VICTORY_POINTS_3878:0 "Нью-Йорк"
+ VICTORY_POINTS_3878:0 "Касл"
  VICTORY_POINTS_9450:0 "Чикаго"
  VICTORY_POINTS_9814:0 "Лос-Анджелес"
  VICTORY_POINTS_10337:0 "Хьюстон"
@@ -415,7 +415,7 @@
  VICTORY_POINTS_9713:0 "Сакраменто"
  VICTORY_POINTS_10370:0 "Спрингфилд"
  VICTORY_POINTS_10717:0 "Канзас-Сити"
- VICTORY_POINTS_11654:0 "Баффало"
+ VICTORY_POINTS_11654:0 "Буффало"
  VICTORY_POINTS_11800:0 "Питтсбург"
  VICTORY_POINTS_3513:0 "Портленд"
  VICTORY_POINTS_12357:0 "Милуоки"
@@ -425,18 +425,18 @@
  VICTORY_POINTS_12501:0 "Нашвилл"
  VICTORY_POINTS_12586:0 "Омаха"
  VICTORY_POINTS_12735:0 "Бирмингем"
- VICTORY_POINTS_12782:0 "Зюрз"
+ VICTORY_POINTS_12782:0 "Сан-Антонио"
  VICTORY_POINTS_13090:0 "Уналашка"
  VICTORY_POINTS_13091:0 "Анкоридж"
  VICTORY_POINTS_3778:0 "Оттава"
- VICTORY_POINTS_3775:0 "Торонто"
+ VICTORY_POINTS_3775:0 "Тронто"
  VICTORY_POINTS_1408:0 "Ванкувер"
  VICTORY_POINTS_3010:0 "Эдмонтон"
  VICTORY_POINTS_4345:0 "Монте-Реаль"
  VICTORY_POINTS_4872:0 "Виннипег"
- VICTORY_POINTS_7361:0 "Галифакс"
+ VICTORY_POINTS_7361:0 "Белфаст"
  VICTORY_POINTS_12149:0 "Квебек"
- VICTORY_POINTS_1965:0 "Мексико"
+ VICTORY_POINTS_1965:0 "Зюрз"
  VICTORY_POINTS_4956:0 "Сан-Луис-Потоси"
  VICTORY_POINTS_12810:0 "Веракрус"
  VICTORY_POINTS_12835:0 "Монтеррей"
@@ -499,7 +499,7 @@
  VICTORY_POINTS_3995:0 "Сайпан"
  VICTORY_POINTS_4180:0 "Гонолулу"
  VICTORY_POINTS_4226:0 "Буин"
- VICTORY_POINTS_4268:0 "Нумеа"
+ VICTORY_POINTS_4268:0 "Санкара"
  VICTORY_POINTS_4329:0 "Сугомаслав"
  VICTORY_POINTS_2489:0 "Трук"
  VICTORY_POINTS_4357:0 "Северное Палау"
@@ -507,7 +507,6 @@
  VICTORY_POINTS_7290:0 "Апиа"
  VICTORY_POINTS_7302:0 "Сува"
  VICTORY_POINTS_12021:0 "Хило"
- VICTORY_POINTS_12120:0 "Порт-Вила"
  VICTORY_POINTS_12140:1 "Хагатна"
  VICTORY_POINTS_12148:0 "Папеэте"
  VICTORY_POINTS_12237:0 "Лаэ"
@@ -1115,8 +1114,38 @@
  VICTORY_POINTS_6680:0 "Лихтенштейн"
  VICTORY_POINTS_6420:0 "Волсаш"
 
+#VICTORIO CITIES(ADDED)
 
- 
+ VICTORY_POINTS_4623:0 "Трали"
+ VICTORY_POINTS_7304:0 "Спрингфилд"
+ VICTORY_POINTS_4430:0 "Кент"
+ VICTORY_POINTS_10244:0 "Честер"
+ VICTORY_POINTS_3806:0 "Линкольн"
+ VICTORY_POINTS_6717:0 "Бостон"
+ VICTORY_POINTS_9708:0 "Бротфорт"
+ VICTORY_POINTS_3733:0 "Лестер"
+ VICTORY_POINTS_11662:0 "Плацбург"
+ VICTORY_POINTS_9850:0 "Фестфорт"
+ VICTORY_POINTS_4720:0 "Фольксштадт"
+ VICTORY_POINTS_12503:0 "Фишенхаффен"
+ VICTORY_POINTS_4787:0 "Шталенберг"
+ VICTORY_POINTS_7810:0 "Вайсбург"
+ VICTORY_POINTS_10534:0 "Блаубург"
+ VICTORY_POINTS_12698:0 "Крабсхаффен"
+ VICTORY_POINTS_12505:0 "Сан-Кусто"
+ VICTORY_POINTS_373:0 "Кляйндорф"
+ VICTORY_POINTS_12223:0 "Лион"
+ VICTORY_POINTS_1785:0 "Метсалинн"
+ VICTORY_POINTS_11682:0 "Норфолк"
+ VICTORY_POINTS_4422:0 "Шарльтон"
+ VICTORY_POINTS_9601:0 "Форто-Риверо"
+ VICTORY_POINTS_4417:0 "Викториовилле"
+ VICTORY_POINTS_7289:0 "Шербур"
+ VICTORY_POINTS_3763:0 "Гамильтон"
+ VICTORY_POINTS_722:0 "Детроит"
+ VICTORY_POINTS_3605:0 "Валенсия"
+ VICTORY_POINTS_12132:0 "Фий"
+
 
 # === [LocEditor:OrphanedKeys] Keys that do not exist in English ===
  VICTORY_POINTS_6683:0 "Базель"
