--- a/uvn_mod/localisation/russian/ZEI_l_russian.yml
+++ b/uvn_mod/localisation/russian/ZEI_l_russian.yml
@@ -15,3 +15,116 @@
  zeitland_army_build_start:0 "Офицерский состав будет реформирован"
  zeitland_army_distribute_start:0 "ВМФ Цайтланда будут улучшены"
  zeitland_army_invest_in_company_start:0 "ВВС Цайтланда будут улучшены"
+
+ ZEI_end_of_colony:0 "Конец колонизации"
+ ZEI_end_of_colony_desc:0 "Колонии уже не так эффективны, как раньше. Местное население восстаёт, а ресурсов для их подавления не хватает. Нужно перестать зависеть от колоний и строить свою промышленность."
+ ZEI_new_colonies:0 "Продолжить колонизацию"
+ ZEI_new_colonies_desc:0 "Цайтланд известен только двумя вещами - армией и колониями. Две эти вещи всегда должны быть в идеале."
+ ZEI_border_east:0 "Укрепить восточные границы"
+ ZEI_border_east_desc:0 "На наши восточные границы регулярно нападают туземцы, новости о смерти солдат или мирных жителей там - уже давно перестали быть новостью. Нам нужно срочно применить меры."
+ ZEI_build_atom:0 "Строительство АЭС"
+ ZEI_build_atom_desc:0 "Панк-Сектербурская АЭС снабдит нашу страну достаточным количеством электроэнергии, что хорошо скажется на развитии нашего государства."
+ ZEI_build_water:0 "Построить ГЭС"
+ ZEI_build_water_desc:0 "У нас есть проблемы с электроэнергией, но у нас на первом месте всегда безопасность жизней наших граждан. АЭС слишком опасна, чтобы её возводить - лучше применим старый, добрый способ."
+ ZEI_scandinavia_colony:0 "Колонизировать Скандинавию"
+ ZEI_scandinavia_colony_desc:0 "Скандинавия - самый уязвимый регион, ведь множество стран, такие как Дусибург или Лютерания, давно хотят ей полакомиться. Но, их мечтам не суждено сбыться."
+ ZEI_siberia_colony:0 "Колонизировать Сибирь"
+ ZEI_siberia_colony_desc:0 "Сибирь богата множеством ценных ресурсов, которых так нам не хватает. Колонизация Сибири - залог мощи и успеха нашего государства на мировой арене."
+ ZEI_border_sgk:0 "Укрепить границу с ВГК"
+ ZEI_border_sgk_desc:0 "Наша граница с ВГК очень уязвима, нам необходимо как можно быстрее её укрепить. Также сообщается о огромных количествах нелегальных беженцев."
+ ZEI_SQR_relation:0 "Улучшить отношения с Sqr United"
+ ZEI_SQR_relation_desc:0 "Sqr United - один из мировых лидеров на флоте, и сотрудничество с ним будет для нас лишь плюсом."
+ ZEI_declare_empire:0 "Объявить империю"
+ ZEI_declare_empire_desc:0 "Хватит прикрываться своей демократичностью, все и так знают, что это бред. Нужно объявить о том, что Цайтланд отныне - великая колониальная империя!"
+ ZEI_SGK_annex:0 "Аннексировать ВГК"
+ ZEI_SGK_annex_desc:0 "ВГК - огромный прыщ на лице Европы, который необходимо срочно исправить. Чем раньше - тем лучше."
+ ZEI_DRK_relation:0 "Улучшить отношения с ДРК"
+ ZEI_DRK_relation_desc:0 "Может показаться, что ДРК - наш противник, но если мы с ним хорошо поговорим, они будут нашим... местом национальных интересов."
+ ZEI_SGK_war:0 "Подчинить ВГК"
+ ZEI_SGK_war_desc:0 "Богдан вновь нарушает все нормы человеческого права. Настало время привести в ВГК демократию!"
+ ZEI_destroy_coal:0 "Уничтожить ТЭС"
+ ZEI_destroy_coal_desc:0 "Теперь, когда у нас есть небольшие количество эффективных АЭС, мы более не нуждаемся во множестве ТЭС, которые только съедают бюджетные деньги."
+ ZEI_exit_uvco:0 "Покинуть ООВГ"
+ ZEI_exit_uvco_desc:0 "ООВГ уже изжил себя - мы пытались оживить его и оставить на плаву всё дольше, но всё бесполезно. Нам нужно найти ему альтернативу."
+ ZEI_water_looking:0 "Пригласить всех на Загорскую ГЭС"
+ ZEI_water_looking_desc:0 "Совсем скоро Загорская ГЭС введут в пользование, и на этом моменте должны присутствовать все представители государств, чтобы они узрели истинное величие и экономическую мощь Цайтланда!"
+ ZEI_aravi_colony:0 "Колонизация арабского полуострова"
+ ZEI_aravi_colony_desc:0 "На арабском полуострове имеются огромные запасы нефти, а она, как известно, никогда и никому не помешает, особенно нам."
+ ZEI_REA_relations:0 "Улучшить отношения с Страной Реальности"
+ ZEI_REA_relations_desc:0 "Страна Реальности - одна из самых близких и надёжных для нас союзников. Стойкие отношения с ней - залог нашего успеха в Европе."
+ ZEI_democratic_reforms:0 "Демократические реформы"
+ ZEI_democratic_reforms_desc:0 "Настало время улучшить положение наших людей в обществе, и демократические реформы - то, что нам нужно."
+ ZEI_cult_of_nikita:0 "Культ Никиты Дорожкина"
+ ZEI_cult_of_nikita_desc:0 "Совершенно очевидно, что во всех успехах Цайтланда нужно благодарить только одного человека - нашего великого лидера Никиты Дорожкина, которого мы должны прославлять всегда и везде!"
+ ZEI_REA_empire:0 "Заключить союз с СР"
+ ZEI_REA_empire_desc:0 "Страна Реальности может быть союзников в наших планах, но конечно, не при Александре Волохове. Народу Стране Реальности нужно заявить о себе, и Цайтланд им в этом поможет."
+ ZEI_airship_countries:0 "Развитие авиации"
+ ZEI_airship_countries_desc:0 "Помня печальный опыт в войне с СР, нам необходимо развивать нашему авиацию, причём как военную, так и гражданскую. Только там мы сможем побеждать в войнах и достигать наших великих целей."
+ ZEI_reform_parlament:0 "Реформа ЗАЦа"
+ ZEI_reform_parlament_desc:0 "Цайтланд, конечно, очень демократическая страна, но наш парламент абсолютно неэффективен. Необходимо его реформировать и привлечь ярких и мощных политиков, чтобы Цайтланд развивался как часы."
+ ZEI_capture_LUT:0 "Вторжение в Лютеранию"
+ ZEI_capture_LUT_desc:0 "Агрессивная политика Лютерании в Датских проливах угрожает нашей торговле и военному флоту. А если нам угрожают, мы имеем право ответить на растущую угрозу."
+ ZEI_capture_DUS:0 "Вторжение в Дусибург"
+ ZEI_capture_DUS_desc:0 "Иван Резчиков - абсолютно нулевой политик, который держит свою страну за последние свои гвозди, забивая ими свой гроб. Наш долг - освободить народ Европы от диктатуры Резчикова."
+
+ ZEI_nikita_dorozhkin:0 "Никита Дорожкин"
+
+ ZEI_uvco_member:0 "Член ООВГ"
+ ZEI_uvco_member_desc:0 "ООВГ - прогнившая организация, которая лишает нас возможности эффективно вести дипломатию."
+ ZEI_colonies:0 "Цайтландский колониализм"
+ ZEI_colonies_desc:0 "Цайтланд - лидер по количеству и скорости колонизации, одна из самых богатых ресурсов государство. Безусловно, мы должны продолжать."
+ ZEI_electricity:0 "Цайтландская энергосистема"
+ ZEI_electricity_desc:0 "Наше государство потребляет больше электроэнергии, чем вырабатывает. Нам следует решить эту проблему - но как?"
+ ZEI_military_propaganda:0 "Милитаризация молодёжи"
+ ZEI_military_propaganda_desc:0 "Каждый ребёнок в Цайтланде с раннего детства знает, как хорошо служить в армии и какие враги имеются у Цайтланда. Мы приведём их к победе."
+ ZEI_zach:0 "ЗАЦ"
+ ZEI_zach_desc:0 "Цайтландский парламент очень неэффективен, и его следует реформировать при первой же возможности."
+ ZEI_destroy_coal_idea:0 "Уничтожение ТЭС"
+ ZEI_destroy_coal_idea_desc:0 "Построив несколько мощных АЭС, мы сэкономим наши ресурсы на более выгодные проекты."
+ ZEI_water_looking_show_idea:0 "Загорская ГЭС"
+ ZEI_water_looking_show_idea_desc:0 "Наша великая ГЭС служит нам и нашей великой стране, увеличивая мнение о нас в других государствах."
+ ZEI_uvn_member:0 "Член ОВН"
+ ZEI_uvn_member_desc:0 "Благодаря ОВН мы сможем проводить внешнюю политику более эффективно."
+ ZEI_democratic_reforms_idea:0 "Демократические реформы"
+ ZEI_democratic_reforms_idea_desc:0 "У нас есть, а точнее были, множество проблем с демократией. Наконец только сейчас они начали решаться."
+ ZEI_cult_of_nikita_idea:0 "Культ личности Никиты Дорожкина"
+ ZEI_cult_of_nikita_idea_desc:0 "Никита Дорожкин создатель нашей великой нации. Это тот человек, который и привёл нас к победе, мы без него не сможем развиваться!"
+ ZEI_air_idea:0 "Развитие Цайтландской авиации"
+ ZEI_air_idea_desc:0 "Бои с ВВС СР потрепали нашу авиацию, и мы должны вложить свои силы, чтобы их восстановить и сделать ещё более лучше."
+ ZEI_good_zach:0 "Реформированный ЗАЦ"
+ ZEI_good_zach_desc:0 "После многих реформ, наш парламент не мешает нам, а делает то, что и должен - укрепляет нашу страну и увеличивает её стабильность."
+
+ aggressive_artist:0 "Агрессивный художник"
+ hard_colonizer:0 "Тяжёлый колонизатор"
+
+ news.1026.t:0 "Аннексия ВГК"
+ news.1026.d:0 "В эту ночь войска Цайтланда, как всегда, начали безобразничать на территории своей марионетки ВГК - настолько, что захватили административные здания и заявили, что \"отныне ВГК - Цайтландское воеводство\". После этого лидер Цайтланда подтвердил данную информацию и заявил об аннексии ВГК. Долгий путь к аннексии был закончен."
+ news.1026.e:0 "Наконец мы навели порядок у своих границ."
+ news.1026.a:0 "Жалкие колонизаторы."
+
+ news.1027.t:0 "Вторжение в ВГК"
+ news.1027.d:0 "В эту ночь войска Цайтланда, как всегда, начали безобразничать на территории своей марионетки ВГК - настолько, что начали нападать на регулярные войска, а затем между двумя странами началась полноценная война. По итогу её ВГК лишился ещё большей независимости, а цайтландские чиновники уже откровенно говорят о планах аннексии ВГК. Немцев ждёт большой крах."
+ news.1027.e:0 "Ну, если крах - это процветание с Цайтландом, то да."
+ news.1027.a:0 "Жалкие колонизаторы."
+
+ news.1028.t:0 "Революция монархистов в Стране Реальности"
+ news.1028.d:0 "Произошло то, чего точно никто не ожидал - к власти в Стране Реальности пришли монархисты, которые заключили союз с Цайтландом. Прошлый лидер СР был вынужден принять требования Цайтланда и бежать за границу. Что с ним сейчас - так и остаётся загадкой."
+ news.1028.e:0 "Трусишка сбежал."
+ news.1028.a:0 "Вы знаете, что такое безумие?"
+
+ SGK_ZEI_war_autonomy:0 "Ввод Цайтландских войск"
+ 
+ zeitland.1.t:0 "Предложение о союзе"
+ zeitland.1.d:0 "Цайтланд предлагает нам подписать \"имперский пакт\", чтобы вместе \"разгромить всех наших давших врагов и восстановить свою территоальную целостность\". Безусловно, звучит очень агрессивно, но что насчёт этого думает народ Страны Реальности?"
+ zeitland.1.a:0 "Прекрасная идея!"
+ zeitland.1.b:0 "Демократией не торгуем."
+
+ zeitland.2.t:0 "Страна Реальности принимает наше предложение!"
+ zeitland.2.d:0 "Лидер Страны Реальности наконец принял наше предложение и под нашим давлением ушёл в отставку - теперь у СР новый лидер, который безусловно поможет стать СР великой страной."
+ zeitland.2.a:0 "Мы добъёмся многого вместе!"
+
+ zeitland.3.t:0 "Страна Реальности отвергает наше предложение!"
+ zeitland.3.d:0 "Так называемый президент Страны Реальности заявил, что \"не собирается продавать нашу святую демократию ради амбиций империалистов\". Похоже, с ним согласен и обдуренный народ этой страны."
+ zeitland.3.a:0 "Этот мир прогнил..."
+
+ REA_ZEI_pact_faction_empire:0 "Имперский пакт"
