--- a/uvn_mod/localisation/russian/parties_l_russian.yml
+++ b/uvn_mod/localisation/russian/parties_l_russian.yml
@@ -1034,3 +1034,8 @@
  MAN_fascism_party:0 "Фашисты Маньчджурии"
  MAN_neutrality_party:0 "Нейтралы Маньчджурии"
 
+ ZEI_democratic_party:0 "ПНЦ"
+ ZEI_communism_party:0 "Коммунисты Цайтланда"
+ ZEI_fascism_party:0 "БДСМ"
+ ZEI_neutrality_party:0 "ПЛП"
+
