--- a/uvn_mod/localisation/russian/ideas_l_russian.yml
+++ b/uvn_mod/localisation/russian/ideas_l_russian.yml
@@ -2698,6 +2698,11 @@
  REA_democracy_regime_desc:0 "Страна Реальности - одна из самых демократических стран мира, которая принимает политических беженцев со всего мира."
  REA_colonization:0 "Колонизация"
  REA_colonization_desc:0 "Наша колонизационная политика приводит к тратам ресурсов на колонии, а местное население борется за свою независимость."
+
+ VIC_nationalism_wildland:0 "Народ Вилдленда"
+ VIC_army_economy:0 "Экономия на армии"
+ VIC_nationalism_wildland_desс:0 "Националистические идеи распространяются среди жителей Вилдленда, что сказывается на нашей стабильности, более того часть северных старейшин открыто заявляет о желании независмости от Викторио."
+ VIC_army_economy_desc:0 "Нам приходится экономить на нашей армии,чтобы развивать другие сферы нашего государства."
  
 # === [LocEditor:OrphanedKeys] Keys that do not exist in English ===
  SPR_louis_gonzalez_ubieta:0 "Луис Гонсалес де Убиета"
