--- a/uvn_mod/localisation/russian/TEX_l_russian.yml
+++ b/uvn_mod/localisation/russian/TEX_l_russian.yml
@@ -1,40 +1,120 @@
 ﻿l_russian:
  
- TEX_On_the_start:0 "На старт"
- TEX_On_the_start_desc:0 "После долгих споров и выборов, время решить, кто мы на мировой арене."
+ TEX_New_standards:0 "Новые Стандарты"
+ TEX_New_standards_desc:0 "Социализм и прочее долго стоял во главе Техаса, теперь пришло время доганять наших восточных сородичей и начать путь демократизации Техаса"
  TEX_Old_Sector:0 "Старый Сектор"
  TEX_Old_Sector_desc:0 "С начала своей истории Техас был социалистическим, путь он таковым и остаётся"
- TEX_Why_bother:0 "Зачем заморачиваться?"
- TEX_Why_bother_desc:0 "Нужно больше углубиться во внутреннюю политику  и заняться государством изнутри, а то что творится за границей не наше дело."
- TEX_Dedkov_is_the_true_ruler:0 "Дедков - истенный правитель"
- TEX_Dedkov_is_the_true_ruler_desc:0 "Демократия - вот наш выбор, так же как и большенство мирового сообщества мы должны идти по пути капитализма. Это даст больше свободы народу."
- TEX_New_Government:0 "Новое правительство Техаса"
- TEX_New_Government_desc:0 "Идеи Кузнецкого ещё со времён СССГ вдохновляли наш народ, теперь пришло время воплотить их в жизнь."
- TEX_Communist_propaganda:0 "Коммунистическая пропаганда"
- TEX_Communist_propaganda_desc:0 "Для прихода к власти, нам нужна поддержка народа, прапоганда - прекрасный вариант"
+ TEX_Reforms:0 "Реформы"
+ TEX_Reforms_desc:0 "Техасу следует пройти масштабные реформы, от названий улиц до экономики"
+ TEX_Dem_propaganda:0 "Пропаганда новых порядков"
+ TEX_Dem_propaganda_desc:0 "Демократия - вот наш выбор, так же как и большенство мирового сообщества мы должны идти по пути капитализма. Это даст больше свободы народу, но народ должен знать по какому пути ему следует идти."
+ TEX_Dedkov:0 "Дедков - база"
+ TEX_Dedkov_desc:0 "Дедков - по сути основал нынешний Техас, освободил нас от империи CAD, он самый стабильный правитель за историю, он тот кто сейчас нужен Техасу."
+ TEX_reduce_powers:0 "Ослабить полномочия Президента"
+ TEX_reduce_powers_desc:0 "Если мы хотим идти по пути Демократии, нам нужно увеличить полномочия парламента и уменьшить полномочия Президента."
  TEX_foreign_example:0 "Зарубежный пример"
  TEX_foreign_example_desc:0 "Кинда - отличный пример удавшегося социализма, мы должны показать нашим гражданам то что они получат (конечно с небольшим приукрашиванием)"
- TEX_an_unfortunate_example:0 "Неудачный пример"
- TEX_an_unfortunate_example_desc:0 "Кинда - прекрасное государство, но их политический строй устроил не всех..."
+ TEX_neu:0 "Нейтралитет"
+ TEX_neu_desc:0 "Техас - всё, остальное - ничто, нам нужно углубится во внутреннюю политику, а то что происходит за границей, не наше дело."
  TEX_Revolution_on_the_threshold:0 "Революция на пороге"
  TEX_Revolution_on_the_threshold_desc:0 "Нынешнее правительство губит федерацию, нужно как можно скорее освободить техас от капиталистического устоя!"
- TEX_Peaceful_parish:0 "Мирный приход"
- TEX_Peaceful_parish_desc:0 "Революция - уничтажающее государство событие, не стоит так торопить события, лучше укрепить поддержку народа к нам, а после все завяжется само собой"
+ TEX_Dedkov_Prez:0 "Дедков президент"
+ TEX_Dedkov_Prez_desc:0 "Дедков уже пробыл на посте не мало сроков, но именно при нём Техас чувствовал себя лучше всего."
  TEX_Velik_Uniko:0 "Velik Uniko!"
  TEX_Velik_Uniko_desc:0 "Техас - воистинну великое государство, мы должны это показывать не только военной мощью но и сплочённостью народа!"
- TEX_March_of_a_Great_Nation:0 "Марш великой нации"
- TEX_March_of_a_Great_Nation_desc:0 "Мы - выликая нация, так давайте же покажем свою сплочённость и силу, прогуляемся все вместе вдоль Зюрза."
- TEX_fraud:0 "Сделать вбросы"
- TEX_fraud_desc:0 "Для прихода к власти, нам нужно показать себя, но как люди поймут что мы не просто говорим, а действуем? Сделаем небольшие вбросы в региональных думах, дабы показать как работают наши депутаты."
+ TEX_march_great_Nation:0 "Марш великой нации"
+ TEX_march_great_Nation_desc:0 "Мы - выликая нация, так давайте же покажем свою сплочённость и силу, прогуляемся все вместе вдоль Зюрза."
+ TEX_World_Dem:0 "Демократизация"
+ TEX_World_Dem_desc:0 "Нельзя останавливаться на достигнутом, нужно полность демократизировать, не только Техас но и отсальной мир."
  TEX_Communist_Triumph:0 "Коммунистический Триумф!"
  TEX_Communist_Triumph_desc:0 "Некогда ждать, пора показать что из себя представляет коммунизм!"
- 
+ TEX_kaz_fra:0 "Дружба с Евразийской Державой"
+ TEX_kaz_fra_desc:0 "Пусть наши идеи не мало расходятся, но начинать войну, это не по Техасски."
+ TEX_Texas_populism:0 "Техасский популизм"
+ TEX_Texas_populism_desc:0 "Техас будет двигаться и движеться к светлому будущему!"
+ TEX_Aron:0 "Кузнецкий - база"
+ TEX_Aron_desc:0 "Кузнецкий хоть и спорная личность, но то что он сильный правитель, отрицать нельзя."
+ TEX_Garan_VGK:0 "Гарантии Германии"
+ TEX_Garan_VGK_desc:0 "Никто в Потремне не сомневается что ВГК наши союзники, у нас уже есть там военная база, теперь нужно официально заявить о нашей гарантии к ним."
+ TEX_Dem_Aron:0 "Демократический Кузнецкий"
+ TEX_Dem_Aron_desc:0 "В прошлом Арон совершил не мало ошибок, в этот раз они не повтарятся..."
+ TEX_Up_powers:0 "Расширить полномочия Президента"
+ TEX_Up_powers_desc:0 "Как бы это не было не демократично, но для более сильного управления страной президенту нужно больше возможностей"
+ TEX_Fas_Aron:0 "Фашизм - будущее нации"
+ TEX_Fas_Aron_desc:0 "Невозможно усомниться в величии нашей нации, нужно что бы у власти сидели те кто это понимает."
+ TEX_Aron_Prez:0 "Снова он"
+ TEX_Aron_Prez_desc:0 "Кузнецкий натворил не мало ошибок, но он сильный правитель в такое время он нужен как никогда."
+ TEX_Army_Up:0 "НГВС ТФ"
+ TEX_Army_Up_desc:0 "Национальная Гваридия Вооруженных Сил Техасской Федерации, длинное и сильное название, наша армия самая многочисленая и одна из сильнейших армий мира, но если мы не будем её развивать, она утратит свою боеспособность."
+ TEX_kaz_War:0 "Война с Кавказом"
+ TEX_kaz_War_desc:0 "Кавказ или Евразия, это не важно, важно то что там царит коммунизм, нам нужно освободить местный народ от коммунистического идола"
+ TEX_rea_up:0 "Дружба со Страной Реальности"
+ TEX_rea_up_desc:0 "Страна Реальности - главная демократия мира, если мы решили идти по демократическому пути, то дружба с ними это прекрасный шаг показать это."
+ TEX_Fas_ruling:0 "Новый порядок"
+ TEX_Fas_ruling_desc:0 "Установление новых порядков в Техасе, шаг к нашему счастливому будущему."
+ TEX_dus_war:0 "Война с Дусярией"
+ TEX_dus_war_desc:0 "Дусибург причинил Техасу не мало бед, он не раз подставлял высоких должностных лиц Техаса и создавал не одну провокацию, мы не можем это просто так простить. К тому же, нам давно пора вернуть Брюссель."
+ TEX_com_propaganda:0 "Коммунистическая пропаганда"
+ TEX_com_propaganda_desc:0 "Что бы вернуть нашу власть, нам нужно показать народу то что мы сейчас из себя представляем."
+ TEX_Big_parad:0 "Большой парад"
+ TEX_Big_parad_desc:0 "Мы должны согласовать огромный марш по Зюрзу, где будут показаны герои Освободительной Революции."
+ TEX_Zapros_inos:0 "Запросить иностранной поддержки"
+ TEX_Zapros_inos_desc:0 "Может быть мы и победим без зарубежной помощи, но с ней всё будет гараздо проще и быстрее."
+ TEX_New_Kons:0 "Новая Конституция"
+ TEX_New_Kons_desc:0 "Новая конституция упразнить должность Президента Федерации и обьявит полный нейтралитет Техаса."
+ TEX_rea_pact:0 "Пакт со Страной Реальности"
+ TEX_rea_pact_desc:0 "У нас достаточно хорошие отношения с ними, но нужно это подкрепить единным союзом!"
+ TEX_dus_fra:0 "Дружба с Дусибургом"
+ TEX_dus_fra_desc:0 "Раньше Техас и Дусибург были вплоне неплохими союзниками, пусть у нас и были разногласия, но это было давно..."
+ TEX_Oleg_war:0 "Война с Олегостаном"
+ TEX_Oleg_war_desc:0 "Олегостан нечего не значит, зря он сунулся в Америку."
+ TEX_Oleg_fra:0 "Дружба с Олегостаном"
+ TEX_Oleg_fra_desc:0 "Олегостан является нашим хорошим другом и союзником, главнейшим на ряду с Индизией."
+ TEX_Boom_TNR:0 "Подрыв ТНП"
+ TEX_Boom_TNR_desc:0 "Нужно создать не стабильную ситуацию, подрыв важнейшего здания в стране, прекрасный вариант."
+ TEX_Grop:0 "Гропкий - вождь Техаса"
+ TEX_Grop_desc:0 "Революция окончена, теперь можно приступить к дальнейшему плану..."
+ TEX_dus_pact:0 "Пакт с Дусибургом"
+ TEX_dus_pact_desc:0 "Дусибург - прекрасный старый союзник Техаса, пусть у нас были напряженные отношения, но сейчас другие времена."
+ TEX_vic_free:0 "Освобождение Викторио"
+ TEX_vic_free_desc:0 "Викторио - прекрасное госудасртво, все чего ему не хватает, это красного флага."
+ TEX_oleg_war_com:0 "Месть Олегостану"
+ TEX_oleg_war_com_desc:0 "Во время революции, Олегостан немало помогал капиталистам, нужно показать Олегостану кто победил в той войне."
+ TEX_world_revolution:0 "Мировая Революция"
+ TEX_world_revolution_desc:0 "Нужно освободит пролетариат стран Евразии, коммунистическое освобождение грядёт!"
+ TEX_Stop:0 "Социальзм в отдельно взятой стране"
+ TEX_Stop_desc:0 "Пусть нашей главной целью остаётся мировая революция, а её неизбежность доказана научно, для начала нужно построить его в Техасе, не забывая при этом про остальные страны."
+ TEX_war_flu:0 "Война с Флюцландом"
+ TEX_war_flu_desc:0 "Флюцланд - маленькое беззащитное государство на севере европы, в таком государстве обязательно будет царить коммунистическое счастье."
+ TEX_war_Ind:0 "Война с Индизией"
+ TEX_war_Ind_desc:0 "Индизия или же ИК, давний союзник старого Техаса, но они ставят и всегда ставили Техас на второй план, для них мы лишь зона влияние, к тому же они крайние антикоммунисты, война с ними неизбежна"
+ TEX_fra_ind:0 "Нейтралитет к Индизии"
+ TEX_fra_ind_desc:0 "Гропкий начал и построил отношения с Индизией, и пусть они крайние антикоммунисты, мы всё ещё можем жить с ними в мире."
+ TEX_com_cons:0 "Коммунистическая Конституция"
+ TEX_com_cons_desc:0 "Установленая после революции конституция, была не плоха, но для нормального функцианирования государства нам нужна новая."
+ TEX_only_party:0 "Единая власть"
+ TEX_only_party_desc:0 "Вождь исчерпал себя, как никак коммунизм продвигает власть рабочих и народа, так что пусть всем заправляет партия, а не один человек."
+
  news.1025.t:0 "Техасские коммунисты набирают поддержку"
  news.1025.d:0 "В Техасе Гропкий и его единомышлиники согласовали мероприятие на улицах Комиграда, в котором показывали на примере Кинды, \"как хорошо жить при социалистическом строе". Любопытно, как на подобные заявления будет реагировать народ Техаса."
  news.1025.a:0 "Интересно... Почти."
  news.1025.e:0 "Что за прекрасный товарищ!"
-
+ news.1026.t:0 "Гражданская война в Техасе"
+ news.1026.d:0 "Бюро Федеральной Безопасности задержало Владимира Гропкого в Техаске откуда он сразу же отправился в СИЗО,где как оказалось у Гропкого были связи и им был совершён побег. Сегодня ночью Владимир Гропкий издал указ о формировании Техасской Федеративной Республики и разжёг пламя революции в Техасе. Как заявляет сам Владимир, он борется с диктаторским режимом Арона Кузнецкого."
+ news.1026.a:0 "Это ужасно..."
+ news.1027.t:0 "Досрочные выборы в Техасе"
+ news.1027.d:0 "Сегодня, Техасской Народной Потремной единогласно было решено провести досрочные выборы Президента Техасской Федерации, на которых победу одержал кандидант от Социал-Демократической Партии, Марк Дедков."
+ news.1027.a:0 "Ещё один демократический игрок на мировой арене."
+ 
  TEX_iron_communism:0 "Укрепление Коммунизма"
  TEX_iron_communism_desc:0 "История повторяется, как в 2021, коммунизм в Техасе начинает набирать популярность, Гропкий уже ищет единомышлиников."
  TEX_Destabilization:0 "Горящий Техас"
  TEX_Destabilization_desc:0 "Техасскя Федерация переполнена разными политическими движениями и все они противоречат друг другу, как тут устроится?"
+
+ TEX_Mark_Dedkov:0 "Марк Дедков"
+ TEX_Mark_Dedkov_desc:0 "Дедков - де-факто основатель современного Техаса, лидер освободительной революции, в общем фундамент Техасской политики. Если он во главе то нельзя сомневаться что с Техасом всё будет хорошо."
+ TEX_Aron_Kuznezkiy_dem:0 "Арон Кузнецкий"
+ TEX_Aron_Kuznezkiy:0 "Арон Кузнецкий"
+ TEX_Potremna:0 "Техасская Народная Потремна"
+ TEX_Potremna_desc:0 "Главнейший государственный орган Техаса, теперь когда должность президента упразднена, именно Потремна отвечает за весь Техас."
+ TEX_Vladimir_Gropkiy:0 "Владимир Гропкий"
